--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <!-- link favicon img -->
-    <link rel="shortcut icon" href="imags/favicon.png" type="image/x-icon" />
+    <!-- link favicon -->
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!-- link style css -->
     <link rel="stylesheet" href="style.css" />
   </head>
